-
Type:
Bug
-
Resolution: Done
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Aggregation Framework
-
None
-
Fully Compatible
-
ALL
-
Query 2016-08-29
-
None
-
None
-
None
-
None
-
None
-
None
-
None
As an oversight in the initial implementation, DocumentSourceFacet does not inherit from SplittableDocumentSource, failing to signal that it is special and needs to be run on the merging shard. The same problem affects $bucketAuto.
This was failed to be caught because the integration test which runs $facets against a sharded cluster only does so when the collection is not sharded: https://github.com/mongodb/mongo/blob/r3.3.10/jstests/aggregation/sources/facet/use_cases.js#L102