SERVER-25584 Ensure $facet and $bucketAuto run on merging shard.